<resources>
    <string name="app_name">晋震应急</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="str_map_fragment">Mapfragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="List_fragment">List fragment</string>


    <string name="title_locate">定位</string>
    <string name="title_data">资料</string>
    <string name="title_estimate">评估</string>
    <string name="title_dynamic">动态</string>
    <!--弹出坐标dialog Layout-->
    <string name="lbl_1">纬度:</string>
    <string name="lbl_2">经度:</string>
    <string name="btn_text_addxy">添加</string>
    <string name="btn_text_cancal">取消</string>

    <!--短信号码 public 是公布的号码  myphone是自己手机测试的号码-->
    <string name="public_sms_number">10657301620101</string>
    <string name="myphone_sms_number">8613132525116</string>

    <!--MapFragment-->
    <string name="basicmap">卫星</string>
    <string name="imagemap">地图</string>
    <string name="queryBtn">查询</string>
    <string name="tab1_title">行政区基本资料</string>
    <string name="tab2_title">案例和预案</string>
    <!--自定义图层URL路径-->
    <string name="webserverurl">http://t1.tianditu.cn/DataServer?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="PGTabName">评估页内容</string>
    <string name="lbl_3">震级</string>

    <string name="item_yxfw">影响范围</string>
    <string name="yxfw_comment">极震区参数及地理环境</string>
    <string name="item_zzj">震中距</string>
    <string name="zzj_comment">震中距周边行政区距离</string>
    <string name="item_lsdz">历史地震</string>
    <string name="lsdz_comment">震中附近（50km）的历史地震</string>
    <string name="item_dzal">地震案例</string>
    <string name="dzal_comment">震级类似的地震案例</string>
</resources>
