<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"

    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/xy_layout"
    android:paddingTop="4dp"
    android:paddingBottom="4dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"

    >
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:orientation="horizontal"
      android:paddingLeft="20dp"
      android:paddingRight="20dp"
      android:layout_margin="4dp"
      >
      <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/lbl_1"
          android:layout_gravity="center_vertical"
          android:layout_marginRight="4dp"
          />
      <EditText
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:id="@+id/input_x"

          android:layout_gravity="center_vertical"
          />
  </LinearLayout>
   <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="4dp"
       android:paddingLeft="20dp"
       android:paddingRight="20dp"
       >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_2"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="4dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/input_y"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>
    <LinearLayout

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        >
       <Button

           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:id="@+id/btn_add_xy"
           android:text="@string/btn_text_addxy"
           android:padding="0dp"
           android:layout_weight="1"
           android:layout_marginLeft="10dp"
            android:backgroundTint="@color/colorPrimary"
           android:textColor="#fff"
           />
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/btn_dial_cancel"
            android:text="@string/btn_text_cancal"
            android:padding="0dp"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/colorAccent"
            android:textColor="#fff"
            />

    </LinearLayout>

</LinearLayout>
